--- a/public/backend/default/css/elements.css
+++ b/public/backend/default/css/elements.css
@@ -10,3 +10,4 @@
 
     More info at: http://lesselements.com
 -----------------------------------------------------*/
+.table tbody td.txtc{text-align: center;}
